--- a/findjob.html
+++ b/findjob.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jobs html</title>
+    <title>Job</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -16,12 +16,11 @@
            <path xmlns="http://www.w3.org/2000/svg" fill="#0473ff" data-original="#219b38" d="M361.7 75.6L265 268.1l-9-25.5 2.7-124.6L338.2 8.5z" />
            <path xmlns="http://www.w3.org/2000/svg" d="M338.2 8.5l-82.2 234-80.4 228.9a48 48 0 01-45.3 32.1H0l173.8-495h164.4z" fill="#0473ff" data-original="#518ef8" />
           </svg>
-          Milao
+          Nhóm 3
          </div>
          <div class="header-menu">
           <a href="#" class="active">Find Job</a>
-          <a href="#">Company Review</a>
-          <a href="#">Find Salaries</a>
+          <a href="company.html">Company Review</a>
          </div>
          <div class="user-settings">
           <div class="dark-light">
@@ -34,8 +33,8 @@
             <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
            </svg>
           </div>
-          <img class="user-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="">
-          <div class="user-name">Suhayel Nasim</div>
+          <img class="user-profile" src="https://uploads.dailydot.com/2018/10/olli-the-polite-cat.jpg?q=65&auto=format&w=2270&ar=2:1&fit=crop" alt="">
+          <div class="user-name">Nguyễn Văn An, Bùi Việt Quang</div>
          </div>
         </div>
         <div class="wrapper">
@@ -58,7 +57,7 @@
             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
             <circle cx="12" cy="10" r="3" />
            </svg>
-           Londontowne, MD
+           Ha Dong, Ha Noi
           </div>
           <div class="search-job">
            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase">
@@ -420,7 +419,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">UI / UX Designer</div>
                  <div class="job-card-subtitle">
-                  2972 Westheimer Rd. Santa Ana.
+                  ReloTalent.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -429,9 +428,9 @@
                </div>
                <div class="job-overview-buttons">
                 <div class="search-buttons time-button">Full Time</div>
-                <div class="search-buttons level-button">Senior Level</div>
+                <div class="search-buttons level-button">Mid Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">9d</div>
                </div>
               </div>
              </div>
@@ -443,9 +442,9 @@
                  <path xmlns="http://www.w3.org/2000/svg" d="M15.4.5a8.6 8.6 0 100 17.2 8.6 8.6 0 000-17.2z" fill="#fefefe" data-original="#f4511e" />
                 </svg>
                 <div class="overview-detail">
-                 <div class="job-card-title">Sr. Product Designer</div>
+                 <div class="job-card-title">Product Designer</div>
                  <div class="job-card-subtitle">
-                  1901 Thornridge Cir.Shiloh, Hawaii.
+                  Hybrid Technologies.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -469,7 +468,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">User Experience Designer</div>
                  <div class="job-card-subtitle">
-                  414 Parker Rd. Allentown, New york
+                  Bull Labs.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -480,7 +479,7 @@
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">27d</div>
                </div>
               </div>
              </div>
@@ -493,7 +492,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">Product Designer</div>
                  <div class="job-card-subtitle">
-                  4517 Washington Ave. Syracuse.
+                  Resola Inc.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -504,7 +503,7 @@
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">6d</div>
                </div>
               </div>
              </div>
@@ -518,7 +517,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">UI / UX Designer</div>
                  <div class="job-card-subtitle">
-                  2711 Ash Dr. San Jose, South Dark.
+                  Travala.com.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -529,7 +528,7 @@
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">10d</div>
                </div>
               </div>
              </div>
@@ -542,7 +541,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">UI Developer</div>
                  <div class="job-card-subtitle">
-                  1725 Preston Rd. Inglewood.
+                  Pentalog.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -553,7 +552,7 @@
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">9d</div>
                </div>
               </div>
              </div>
@@ -569,7 +568,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">User Interface Designer</div>
                  <div class="job-card-subtitle">
-                  2972 Westheimer Rd. Santa Ana.
+                  Vinova Pte. Ltd.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -579,8 +578,8 @@
                <div class="job-overview-buttons">
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
-                <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-stat">Old</div>
+                <div class="job-day">1m</div>
                </div>
               </div>
              </div>
@@ -593,7 +592,8 @@
                 <div class="overview-detail">
                  <div class="job-card-title">UI / UX Designer</div>
                  <div class="job-card-subtitle">
-                  1976 Thornide Joshua. Andr Maria.
+                  Adecco
+.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -603,8 +603,8 @@
                <div class="job-overview-buttons">
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
-                <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-stat">Old</div>
+                <div class="job-day">30d</div>
                </div>
               </div>
              </div>
@@ -620,7 +620,7 @@
                 <div class="overview-detail">
                  <div class="job-card-title">UX Designer</div>
                  <div class="job-card-subtitle">
-                  2972 Westheimer Rd. Santa Ana.
+                  Inwave Studio.
                  </div>
                 </div>
                 <svg class="heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
@@ -631,7 +631,7 @@
                 <div class="search-buttons time-button">Full Time</div>
                 <div class="search-buttons level-button">Senior Level</div>
                 <div class="job-stat">New</div>
-                <div class="job-day">4d</div>
+                <div class="job-day">7d</div>
                </div>
               </div>
              </div>
@@ -660,8 +660,8 @@
                </div>
               </div>
               <div class="job-subtitle-wrapper">
-               <div class="company-name">Patreon <span class="comp-location">Londontowne, MD.</span></div>
-               <div class="posted">Posted 8 days ago<span class="app-number">98 Application</span></div>
+               <div class="company-name">Indeed <span class="comp-location">Ha Dong, Ha Noi.</span></div>
+               <div class="posted">Posted 8 days ago<span class="app-number">69 Application</span></div>
               </div>
               <div class="explain-bar">
                <div class="explain-contents">
@@ -683,7 +683,9 @@
               </div>
               <div class="overview-text">
                <div class="overview-text-header">Overview</div>
-               <div class="overview-text-subheader">We believe that design (and you) will be critical to the company's success. You will work with our founders and our early customers to help define and build our product functionality, while maintaining the quality bar that customers have come to expect from modern SaaS applications. You have a strong background in product design with a quantitavely anf qualitatively analytical mindset. You will also have the opportunity to craft our overall product and visual identity and should be comfortable to flex into working.</div>
+               <div class="overview-text-subheader">We are looking for a user-experience (UI/UX) designer able to understand our business requirements and any technical limitations, as well as be responsible for conceiving and conducting user research, interviews and surveys, and translating them into sitemaps, user flows, customer journey maps, wireframes, mockups and prototypes.</div>
+                <br>
+                <div class="overview-text-subheader">The UX designer will also be expected to design the overall functionality of the product, and in order to ensure a great user experience, iterate upon it in accordance with user-testing </div>
               </div>
               <div class="overview-text">
                <div class="overview-text-header">Job Description</div>
@@ -693,6 +695,16 @@
                <div class="overview-text-item">Excellent communication skills with a well-defined design process.</div>
                <div class="overview-text-item">Familiarity with design tools like Sketch and Figma</div>
                <div class="overview-text-item">Up-level our overall design and bring consistency to end-user facing properties</div>
+              </div>
+
+                <div class="overview-text">
+               <div class="overview-text-header">Responsibilities</div>
+               <div class="overview-text-item">Translate concepts into user flows, wireframes, mockups and prototypes that lead to intuitive user experiences.</div>
+               <div class="overview-text-item">Facilitate the product vision by researching, conceiving, sketching, prototyping and user-testing experiences for digital products.</div>
+               <div class="overview-text-item">Design and deliver wireframes, user stories, user journeys, and mockups optimized for a wide range of devices and interfaces.</div>
+               <div class="overview-text-item">Identify and troubleshoot UX problems (e.g. responsiveness).</div>
+               <div class="overview-text-item">Identify design problems and devise elegant solutions</div>
+               <div class="overview-text-item">Prepare and present rough drafts to internal teams and key stakeholders</div>
               </div>
              </div>
             </div>
